# mruby-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig
components/mruby_component/: CMakeLists.txt  component.mk  esp32_build_config.rb
components/mruby_component/mruby-esp32-system/: mrbgem.rake
components/mruby_component/mruby-esp32-system/mrblib/: mrb_esp32_system.rb
components/mruby_component/mruby-esp32-system/src/: mrb_esp32_system.c
components/mruby_component/mruby-esp32-wifi/: mrbgem.rake
components/mruby_component/mruby-esp32-wifi/mrblib/: mrb_esp32_wifi.rb
components/mruby_component/mruby-esp32-wifi/src/: mrb_esp32_wifi.c
main/: CMakeLists.txt  component.mk  entry_mrb.h  fabgl_control.cpp  fabgl_demo.cpp  family_mruby_main.cpp  family_mruby_menu.cpp  fmruby.h  fmruby_app.h  fmruby_config.cpp  fmruby_editor.cpp  fmruby_editor.h  fmruby_fabgl.h  fmruby_main.cpp  fmruby_menu.cpp  fmruby_mruby_engine.cpp  fmruby_storage.cpp  fmruby_subapp.cpp  fmruby_system.cpp  fmruby_ui.cpp  fmruby_virtual_key.h  idf_component.yml  mruby_main.c  test.cpp
main/examples/: adc.rb  filesystem.rb  gpio.rb  ledc_breathe.rb  ledc_buzzer.rb  ledc_servo.rb  mcpwm_servo.rb  mqtt_led_servo.rb  mqtt_publish.rb  mqtt_subscribe.rb  pwm_servo.rb  simplest.rb  spi.rb  system.rb  system_mrb.rb  wifi_connect.rb  wifi_socket.rb  wifi_socket_example_mrb.rb
main/mrb/: bitmap_test.rb  demo.rb  entry_mrb.rb  rpg_test.rb  tetris.rb
main/spiffs/: main.rb
release_bin/: flash_bins.sh
tool/: cp_bins.sh  flash_spiffs.sh  img_to_rgb222.rb  (+1 more)
(+25 files in other folders)
